# cctv_calibration_system

./: .gitignore  CMakeLists.txt  README.md  README.orig.md  calib.py  conda.yaml  synthetic_data_gen.py  synthetic_run.py  tempCodeRunnerFile.py  test.json  test.py  test2.py  test3.py  test4.py  test_data_generate_bed.py  testtest.py
data/: synthetic_cfg.json
include/: common.h  convertor.hpp
include/modules/: util.hpp
include/modules/board/: arucoboard.hpp  board.hpp  chessboard.hpp
include/modules/camera/: brown_conrady.hpp  camera.h  camera_model_template.hpp  double_sphere.hpp  kannala_brandt.hpp  quadra_sphere.hpp  response.hpp  single_sphere.hpp  triple_sphere.hpp  vignette.hpp
include/modules/frame/: frame.hpp
markers/: __init__.py  point.py  rectangle.py
modules/: __init__.py
modules/board/: __init__.py
modules/cameras/: __init__.py  generator.py  projectors.py
modules/frame/: __init__.py
modules/generator/: __init__.py  generator.py
modules/gui/: __init__.py  viz_matplotlib.py
modules/markers/: __init__.py  generator.py  map.py  point.py  rectangle.py
modules/optimizer/: __init__.py
scripts/: calib.py  make_animation.py  synthetic_run.py  test_data_generate_bed.py
scripts/tests_markers/: test_vector.py
scripts/tests_optimizer/: test_optimizer.py
src/: main.cpp  main_calib.cpp  test_brown_conrady.cpp  test_camera_model.cpp
tests/: test_point.py  test_rect.py  test_vector.py
tests/tests_board/: test_board.py
tests/tests_cameras/: test_cameras.py  test_convertor.py
tests/tests_markers/: test_point.py  test_rect.py  test_vector.py
